@@ -1,6 +1,6 @@
 /* $Id: TransferContent.java,v 1.8 2010/11/14 15:49:16 nhnb Exp $ */
 /***************************************************************************
- *                      (C) Copyright 2003 - Marauroa                      *
+ *                   (C) Copyright 2003-2012 - Marauroa                    *
  ***************************************************************************
  ***************************************************************************
  *                                                                         *
@@ -15,6 +15,8 @@ package marauroa.common.net.message;
 import java.io.IOException;
 
 import marauroa.common.Utility;
+import marauroa.common.crypto.Hash;
+import marauroa.common.net.NetConst;
 
 /**
  * A helper class to transfer content from server to client.
@@ -36,20 +38,17 @@ public class TransferContent {
 	 */
 	public int timestamp;
 
-	/**
-	 * The content itself.
-	 */
+	/** The content itself. */
 	public byte[] data;
 
-	/**
-	 * If the client can cache this content,  this would be true.
-	 */
+	/** If the client can cache this content,  this would be true. */
 	public boolean cacheable;
 
-	/**
-	 * If the client approved this content to be transfered it will be true.
-	 */
+	/** If the client approved this content to be transfered it will be true. */
 	public boolean ack;
+
+	/** a hash of the data */
+	private byte[] hash;
 
 	/**
 	 * Constructor
@@ -63,6 +62,18 @@ public class TransferContent {
 		timestamp = 0;
 	}
 
+	/**
+	 * gets the hash
+	 *
+	 * @return hash
+	 */
+	public byte[] getHash() {
+		if (hash == null) {
+			hash = Hash.hash(data);
+		}
+		return hash;
+	}
+
 	@Override
 	public String toString() {
 		StringBuffer sstr = new StringBuffer();
@@ -71,6 +82,8 @@ public class TransferContent {
 		sstr.append(name);
 		sstr.append("\" timestamp=\"");
 		sstr.append(timestamp);
+		sstr.append("\" hash=\"");
+		sstr.append(Hash.toHexString(getHash()));
 		sstr.append("\"]");
 
 		return sstr.toString();
@@ -98,6 +111,9 @@ public class TransferContent {
 	public void writeREQ(marauroa.common.net.OutputSerializer out) throws IOException {
 		out.write(name);
 		out.write(timestamp);
+		if (out.getProtocolVersion() >= NetConst.FIRST_VERSION_WITH_CONTENT_HASH) {
+			out.write(getHash());
+		}
 		out.write((byte) (cacheable ? 1 : 0));
 	}
 
@@ -109,6 +125,9 @@ public class TransferContent {
 	public void readREQ(marauroa.common.net.InputSerializer in) throws IOException {
 		name = in.readString();
 		timestamp = in.readInt();
+		if (in.getProtocolVersion() >= NetConst.FIRST_VERSION_WITH_CONTENT_HASH) {
+			hash = in.readByteArray();
+		}
 		cacheable = (in.readByte() == 1);
 	}
 
@@ -141,6 +160,9 @@ public class TransferContent {
 		out.write(name);
 		out.write(data);
 		out.write(timestamp);
+		if (out.getProtocolVersion() >= NetConst.FIRST_VERSION_WITH_CONTENT_HASH) {
+			out.write(getHash());
+		}
 		out.write((byte) (cacheable ? 1 : 0));
 	}
 
