@@ -1,6 +1,8 @@
 Changelog
 ---------
 3.8.8
+- content transfer includes a md5 hash of the content,
+  if both server and client are using the new protocol version 34
 - automatically try to use a configured SOCKS-proxy. If it cannot be used, Marauroa falls back to direct connections
 - RPRuleProcessorImpl provides a default implementation for IRPRuleProcessor
 - new server.ini variable server_abuseContact to add a sentence with contact information to the ban dialog.
